style: Update endpoint names
